[gd_scene load_steps=6 format=2]

[ext_resource path="res://challenges/week5/gfx/mark/base.webp" type="Texture" id=1]
[ext_resource path="res://challenges/week5/gfx/mark/top.webp" type="Texture" id=2]
[ext_resource path="res://challenges/week5/scenes/locationMark/locationMark.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("top:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -30 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "jumping"
length = 0.5
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("top:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -30 ), Vector2( 0, -38 ), Vector2( 0, -30 ) ]
}

[node name="locationMark" type="Node2D"]
script = ExtResource( 3 )

[node name="base" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="top" type="Sprite" parent="."]
position = Vector2( 0, -30 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/jumping = SubResource( 2 )

[connection signal="hide_me" from="." to="." method="_on_locationMark_hide_me"]
[connection signal="show_me" from="." to="." method="_on_locationMark_show_me"]
